--- a/data/app/system/app.html
+++ b/data/app/system/app.html
@@ -117,7 +117,7 @@
             <div class="panel panel-default">
 
     <div class="panel-heading post-thumb">
-        <a href="https://support.putraappsoft.eu.org"> <img class="img img-responsive" src="https://data-feed-putra-apps.netlify.app/data/app/system/compress/support.jpg" />
+        <a href="https://redirector-putraappsoft.herokuapp.com/download-app.php"> <img class="img img-responsive" src="https://data-feed-putra-apps.netlify.app/data/app/system/compress/support.jpg" />
     </div>
 
     <div class="panel-body post-body">
